--- a/package.json
+++ b/package.json
@@ -10,32 +10,10 @@
   "repository": "brettcrowell/solar-lapse",
   "license": "MIT",
   "files": [
-    "index.js",
-    "cli.js"
+    "solar-lapse.js"
   ],
   "keywords": [
     "solar-lapse",
     ""
-  ],
-  "dependencies": {
-    "meow": "^2.0.0"
-  },
-  "devDependencies": {
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-nodeunit": "^0.4.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "load-grunt-tasks": "^1.0.0",
-    "time-grunt": "^1.0.0",
-    "grunt-mocha-cli": "^1.11.0",
-    "jshint-stylish": "^1.0.0",
-    "browserify": "^7.0.0"
-  },
-  "scripts": {
-    "test": "grunt",
-    "browser": "browserify index.js > browser.js"
-  },
-  "bin": {
-    "solar-lapse": "cli.js"
-  }
+  ]
 }
