--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fs": "0.0.2",
     "gphoto2": "^0.1.7",
     "reboot": "0.0.1",
+    "suncalc": "^1.6.0",
     "winston": "^0.9.0"
   },
   "devDependencies": {
