adding momentjs and customizing

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "aws-sdk": "^2.1.14",
     "fs": "0.0.2",
     "gphoto2": "^0.1.7",
+    "moment": "^2.10.6",
     "reboot": "0.0.1",
     "suncalc": "^1.6.0",
     "winston": "^0.9.0"
